# AIR-FastAgent

./: README.md  fast-agent-v1.py  fast-agent-v3.py  fast-agent.py  fast-agent1.py  fast-agent2.py  my_chat_history.db  pyproject.toml  ss.ipynb  ss.py
nbs/: nlp-llm.py  ocr-docl.py  ocr-vlm.py  test.py  test_e.py
src/: agent.py  chat_model.py
